--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ future: true
 RSS: false
 #weibo_username:     huxpro
 zhihu_username:     young-jo
-github_username:    yang-vera
+github_username:    jioyoung
 #twitter_username:   huxpro
 #facebook_username:  huxpro
 linkedin_username:  yang-zhao-5a662389
