--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Yang & Vera Blog
-SEOTitle: 羊和然宝 | Yang & Vera Blog
+title: Yang's Blog
+SEOTitle: 旸 | Yang's Blog
 header-img: img/home-bg.jpg
 email: joyzhyang@gmail.com
 description: "描述 balabala"
